--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ file.reference.mysql-connector-java-5.1.45-bin.jar=F:\\mysql-connector-java-5.1.
 j2ee.server.domain=C:/Users/Zafrul Hasan Nasim/AppData/Roaming/NetBeans/8.1/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Zafrul Hasan Nasim\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
